# chart-rs

./: .editorconfig  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
benches/: core_math_bench.rs
docs/: architecture.md  axis-section-visual-fixtures.md  crosshair-formatter-contract-matrix.md  developer-guide.md  gtk-relm4-crosshair-formatters.md  lightweight-v5.1-axis-cadence-reference.md  next-session-prompt.md  parity-v5.1-checklist.md  v5.1-default-parity-audit.md
examples/: README.md  candlestick_projection_snapshot.rs  crosshair_formatter_lifecycle.rs  gtk_binance_axis_interactions.rs  gtk_binance_axis_lab.rs  gtk_binance_axis_scale_interactions.rs  gtk_binance_basic.rs  gtk_binance_contracts_lab.rs  gtk_binance_crosshair_modes.rs  gtk_binance_defaults_normal_live.rs  gtk_binance_live_poll.rs  gtk_binance_logical_inspector.rs  gtk_binance_multi_pane_volume.rs  gtk_binance_price_scale_modes.rs  gtk_binance_projection_probe.rs  gtk_binance_replay_workbench.rs  gtk_binance_scale_window_lab.rs  gtk_binance_symbol_switch.rs  gtk_interaction_lab.rs  gtk_live_data_workbench.rs  gtk_projection_gallery.rs  gtk_tradingview_binance.rs  snapshot_diagnostics_contract.rs  time_scale_interactions.rs
scripts/: check_axis_density_bench_regressions.py  check_fallback_bench_regressions.py  check_new_parity_bench_regressions.py  ship_alpha.sh
src/: error.rs  lib.rs  telemetry.rs
tests/: api_smoke_tests.rs  api_snapshot_tests.rs  api_tuning_tests.rs  area_series_tests.rs  bar_series_tests.rs  baseline_series_tests.rs  candlestick_bar_style_override_tests.rs  candlestick_render_frame_tests.rs  candlestick_style_behavior_api_tests.rs  candlestick_tests.rs  candlestick_visible_tests.rs  chart_config_axis_label_behavior_tests.rs  chart_config_candlestick_style_behavior_tests.rs  chart_config_crosshair_axis_label_box_style_behavior_tests.rs  chart_config_crosshair_axis_label_style_behavior_tests.rs  chart_config_crosshair_axis_label_visibility_behavior_tests.rs  chart_config_crosshair_guide_line_behavior_tests.rs  chart_config_crosshair_guide_line_style_behavior_tests.rs  chart_config_interaction_behavior_tests.rs  chart_config_last_price_behavior_tests.rs  chart_config_last_price_source_mode_tests.rs  chart_config_price_scale_behavior_tests.rs  chart_config_price_scale_realtime_behavior_tests.rs  chart_config_time_scale_behavior_tests.rs  chart_config_time_scale_policy_behavior_tests.rs  chart_config_time_scale_zoom_behavior_tests.rs  core_scale_tests.rs  crosshair_axis_label_box_style_behavior_api_tests.rs  crosshair_axis_label_style_behavior_api_tests.rs  crosshair_axis_label_visibility_behavior_api_tests.rs  crosshair_config_behavior_tests.rs  crosshair_tests.rs  (+75 more)
(+178 files in other folders)
