[package]
name = "chart-rs"
version = "0.0.8-alpha.0"
edition = "2024"
rust-version = "1.85"
description = "A Rust-native charting library for GTK4/Relm4 inspired by Lightweight Charts v5.1."
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["chart", "gtk4", "finance", "cairo", "desktop"]
categories = ["graphics", "gui", "visualization"]

[lib]
name = "chart_rs"
path = "src/lib.rs"

[features]
default = []
# Cairo/Pango renderer backend.
cairo-backend = ["dep:cairo", "dep:pango", "dep:pangocairo"]
# GTK4 adapter layer for embedding into desktop apps.
gtk4-adapter = ["cairo-backend", "dep:gtk4"]
# Convenience feature for desktop consumers.
desktop = ["gtk4-adapter"]
# Optional parallel candle projection for large datasets.
parallel-projection = ["dep:rayon"]
# Optional helper to initialize a default tracing subscriber.
telemetry = ["dep:tracing-subscriber"]

[dependencies]
cairo = { package = "cairo-rs", version = "0.21", optional = true }
pango = { version = "0.21", optional = true }
pangocairo = { version = "0.21", optional = true }
gtk4 = { version = "0.10", optional = true }
thiserror = "2.0"
chrono = "0.4"
rust_decimal = "1.36"
smallvec = "1.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
ordered-float = "4.5"
indexmap = { version = "2.7", features = ["serde"] }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
criterion = { version = "0.8", default-features = false }
proptest = "1.6"
approx = "0.5"

[[bench]]
name = "core_math_bench"
harness = false
